Fix height adjustments to only apply when menubar is visible

--- a/css/menubar-joomla.css
+++ b/css/menubar-joomla.css
@@ -1,16 +1,16 @@
 @media (min-width: 768px) {
 
-  body.crm-menubar-over-cms-menu {
+  body.crm-menubar-over-cms-menu.crm-menubar-visible {
     padding-top: 40px;
   }
-  body.crm-menubar-over-cms-menu.crm-menubar-wrapped {
+  body.crm-menubar-over-cms-menu.crm-menubar-visible.crm-menubar-wrapped {
     padding-top: 80px;
   }
 
-  body.crm-menubar-below-cms-menu {
+  body.crm-menubar-below-cms-menu.crm-menubar-visible {
     margin-top: 40px;
   }
-  body.crm-menubar-below-cms-menu.crm-menubar-wrapped {
+  body.crm-menubar-below-cms-menu.crm-menubar-visible.crm-menubar-wrapped {
     margin-top: 80px;
   }
 
